syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Profile.Frames.Gen";

service ProfileFrames{
	rpc Create(CreateFrameRequest) returns (google.protobuf.Empty);
	rpc Get(GetFrameRequest) returns (GetFrameResponse);
	rpc GetAvailable(google.protobuf.Empty) returns (GetFramesResponse);
	rpc Update(UpdateFrameRequest) returns (google.protobuf.Empty);
	rpc Delete(DeleteFrameRequest) returns (google.protobuf.Empty);
}

message CreateFrameRequest {
	string s3_path = 1;
	string name = 2;
	string description = 3;
	int32 necessary_mmr = 4;
	int32 necessary_games = 5;
	int32 necessary_wins = 6;
	bool available = 7;
}

message GetFrameRequest {
	int32 id = 1;
}

message GetFrameResponse {
	int32 id = 1;
	string s3_path = 2;
	string name = 3;
	string description = 4;
	int32 necessary_mmr = 5;
	int32 necessary_games = 6;
	int32 necessary_wins = 7;
	bool available = 8;
	string file_name = 9;
}

message GetFramesResponse {
    repeated GetFrameResponse avatars = 1;
}

message UpdateFrameRequest {
	int32 id = 1;
	string s3_path = 2;
	string name = 3;
	string description = 4;
	int32 necessary_mmr = 5;
	int32 necessary_games = 6;
	int32 necessary_wins = 7;
	bool available = 8;
}

message DeleteFrameRequest{
	int32 id = 1;
}